--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <link rel="stylesheet" href="style.css">
 
 <header>
-    <h1>The largest community of photo enthusiasts</h1>
-    <a href="#" class="btn btn_accent">Join Today</a>
+    <h1>The largest community of photo enthusiasts!</h1>
+    <a href="#" class="btn btn_accent">Join Today</a> 
+      
 </header>
