--- a/index.html
+++ b/index.html
@@ -26,5 +26,5 @@
 </div>
 <header class="bg_header">
     <h1 class="bg_header__title">The largest community of photo enthusiasts!</h1>
-    <a href="#" class="btn btn_accent">Join Today</a>
+    <a href="#" class="btn btn_accent btn_call_to_action">Join Today</a>
 </header>
