--- a/index.html
+++ b/index.html
@@ -31,27 +31,28 @@
 
 
 <section>
-    <h2>Snap photos and share like never before</h2>
+    <h2 class="card_titles">Snap photos and share like never before</h2>
     <div class="container">
         <div class="card">
-            <h5>Sed ut perspiciatis</h5>
-            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+            <h5 class="parg_title">Sed ut perspiciatis</h5>
+            <p class="middle_shiis">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
             <a href="#" class="btn btn_light">Learn more</a>
         </div>
         <div class="card">
-            <h5>Sed ut perspiciatis</h5>
-            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+            <h5 class="parg_title">Lorem ipsum dolor</h5>
+            <p class="middle_shiis">Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</p>
             <a href="#" class="btn btn_light">Learn more</a>
         </div>
         <div class="card">
-            <h5>Sed ut perspiciatis</h5>
-            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+            <h5 class="parg_title">Nemo enim ipsam</h5>
+            <p class="middle_shiis">Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam.</p>
             <a href="#" class="btn btn_light">Learn more</a>
         </div>
         <div class="card">
-            <h5>Sed ut perspiciatis</h5>
-            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+            <h5 class="parg_title">Tempor incididunt</h5>
+            <p class="middle_shiis">Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora.</p>
             <a href="#" class="btn btn_light">Learn more</a>
         </div>
     </div>
 </section>
+
