added last section

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 </header>
 
 
-<section>
-    <h2 class="card_titles">Snap photos and share like never before</h2>
+<section class="card_title">
+    <h2 class="card_titles">Snap photos and share </br> like never before</h2>
     <div class="container">
         <div class="card">
             <h5 class="parg_title">Sed ut perspiciatis</h5>
@@ -55,4 +55,77 @@
         </div>
     </div>
 </section>
-
+<section>
+    <div class="centeeer">
+        <div>
+            <img src="images/picture1_placeholder.png" class="center_image">
+        </div>
+        <div class="centeer_text">
+            <h2 class="center_title">Sed ut perspiciatis unde omnis</h2>
+            <p class="center_paragraph">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.</p>
+         </div>
+    </div>
+</section>
+<section class="u_center_main">
+    <div class="u_center">
+        <div class="u_center_text">
+            <h2 class="u_center_title">Sed ut perspiciatis unde omnis</h2>
+            <p class="u_center_paragraph">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.</p>
+        </div>
+        <div class="u_center_image">
+            <img src="Images/picture1_placeholder.png">
+        </div>
+    </div>
+</section>
+<section>
+    <div>
+        <h2 class="comp_title">You’re in good company</h2>
+    </div>
+    <div>
+        <p class="comp_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+    </div>
+    <div class="comp_menu">
+     <div class="comp_images">
+        <div class="comp_top">
+            <div class="111">
+                 <img src="Images/photo2.png">
+            </div>
+            <div class="222">
+                 <img src="Images/photo2.png">       
+            </div>
+            <div>
+                <img src="Images/photo2.png">
+            </div>
+            <div>
+                 <img src="Images/photo2.png">       
+             </div>
+        </div> 
+     <div class="comp_bottom">
+        <div>
+            <img src="Images/photo2.png">
+       </div>
+       <div>
+            <img src="Images/photo2.png">       
+       </div>
+       <div>
+           <img src="Images/photo2.png">
+       </div>
+       <div>
+            <img src="Images/photo2.png">       
+        </div>
+        </div>
+    </div>
+</section>
+<section class="last_cont">
+    <div>
+        <p class="last_cont_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+    </div>
+        <div class="last_cont_buttons">
+         <div class="last_cont_accent">
+            <a href="#" class="btn btn_accent">Join Today</a>
+         </div>
+         <div class="last_cont_light">
+            <a href="#" class="btn btn_light">Contact us</a>
+         </div>
+        </div>  
+ </section>
