--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
     <div class="comp_menu">
      <div class="comp_images">
         <div class="comp_top">
-            <div class="111">
+            <div>
                  <img src="Images/photo2.png">
             </div>
-            <div class="222">
+            <div>
                  <img src="Images/photo2.png">       
             </div>
             <div>
@@ -129,3 +129,38 @@
          </div>
         </div>  
  </section>
+<footer>
+    <section>
+        <div class="footer_top">
+                <a href="#mobil1eapp" class="tteksts">Mobile app</a>
+                <a href="#mobil1eapp" class="tteksts">Community</a>
+                <a href="#mobileapp">Company</a>
+                <div class="footer_logo">
+                    <a href="#logo" class="under_logo"> 
+                    <img src="Images/footerlogo.png">    
+                     </a>
+                </div>
+                <a href="#mobileapp">Help desk</a>
+                <a href="#mobileapp">Blog</a>
+                <a href="#mobileapp">Resources</a>
+        </div>
+        <hr>
+        <div class="footer_ikonas">
+            <a href="#ikona">
+                <img src="Images/footer_ikonas.png">
+            </a>
+            <a href="#ikona">
+                <img src="Images/footer_ikonas.png">
+            </a>
+            <a href="#ikona">
+                <img src="Images/footer_ikonas.png">
+            </a>
+            <a href="#ikona">
+                <img src="Images/footer_ikonas.png">
+            </a>
+        </div>
+        <div class="footer_teksts">
+            <p class="footer_teksts">© Photo, Inc. 2019. We love our users!</p>
+        </div>
+    </section>
+</footer>
